--- a/B2B_Dental_Email.html
+++ b/B2B_Dental_Email.html
@@ -34,10 +34,10 @@
     table{border-collapse: collapse !important;}
     body{height: 100% !important; margin: 0 !important; padding: 0 !important; width: 100% !important;}
 	  
-	/* Universal styles for links */
-		a { color: #7C51E1; font-weight: bold; }
-		a:hover { color: #ffffff; text-decoration: none; }
-		a.button:hover { background-color: #7C51E1 !important; }
+/* Universal styles for links */
+a { color: #ffffff; font-weight: bold; }
+a:hover { color: #7C51E1; text-decoration: none; }
+a.button:hover { background-color: #7C51E1 !important; }
 	  
     /* iOS BLUE LINKS */
     a[x-apple-data-detectors] {
